# projeto-advocatos

./: .cirrus.yml  .gitignore  README.md  index.html  instrucions.md  instructions2.md  package-lock.json  package.json  requesitos v3.md
.design/d2/advocatos/: README.md
.github/workflows/: build-macos.yml
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_remove_language.sql  0003_add_default_rule.sql  0004_cobrancas.sql  0005_correcao_ajustes.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  open_check.rs  watcher.rs
src/components/: AjustarBtn.svelte  AjusteDialog.svelte  Badge.svelte  BarChart.svelte  Button.svelte  Card.svelte  Checkbox.svelte  CobrancaPill.svelte  FolderChangeDialog.svelte  Icon.svelte  Metric.svelte  Modal.svelte  SectionHeader.svelte  Segmented.svelte  Select.svelte  SessionEditDialog.svelte  Sidebar.svelte  StatusPill.svelte  Table.svelte  Tabs.svelte  TextField.svelte  Toggle.svelte  TopBar.svelte  TrafficLights.svelte  WindowsCommandBar.svelte  WindowsSidebar.svelte  WindowsStatusBar.svelte  WindowsTitleBar.svelte
src/lib/: adjust.js  aggregations.js  data.js  db.js  format.js  pricing.js  tauri.js
src/screens/: Analise.svelte  ClienteDetalhe.svelte  Clientes.svelte  Cobrancas.svelte  Dashboard.svelte  Definicoes.svelte  Monitorizacao.svelte  Regras.svelte
src/stores/: clientes.js  cobrancas.js  monitor.js  navigation.js  os.js  regras.js  search.js  sessoes.js  settings.js
(+10 files in other folders)
